[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "llm-proxy"
version = "0.1.0"
description = "FastAPI proxy for OpenAI and Anthropic with streaming"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "LLM Proxy" }]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.4",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
]

[project.scripts]
llm-proxy = "app.main:app"

[tool.uv]
dev-dependencies = ["llm-proxy[dev]"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
  "app/",
  "README.md",
  "pyproject.toml",
]
exclude = [
  "*.pyc",
  "__pycache__/",
  "*.pyo",
  "*.pyd",
  ".Python",
  "build/",
  "develop-eggs/",
  "dist/",
  "downloads/",
  "eggs/",
  ".eggs/",
  "lib/",
  "lib64/",
  "parts/",
  "sdist/",
  "var/",
  "wheels/",
  "*.egg-info/",
  ".installed.cfg",
  "*.egg",
]